<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#F3E5F5"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/title_screen"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:layout_marginBottom="10sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/main_info"
        android:textSize="30sp"
        android:textColor="@color/pink"
        android:layout_marginBottom="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_firstname"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:labelFor="@id/et_main_firstname"
        />

    <EditText
        android:id="@+id/et_main_firstname"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/pink"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:labelFor="@id/et_main_lastname"
        />

    <EditText
        android:id="@+id/et_main_lastname"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/pink"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_number"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:labelFor="@id/et_main_number"
        />

    <EditText
        android:id="@+id/et_main_number"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:backgroundTint="@color/pink"
        />

    <Button
        android:id="@+id/btn_main_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_switch_screen"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />

</LinearLayout>