<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#E8F5E9"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/title_screen"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:layout_marginBottom="10sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/second_info"
        android:textSize="30sp"
        android:textColor="@color/pink"
        android:layout_marginBottom="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_firstname"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:labelFor="@id/et_second_firstname"
        />

    <EditText
        android:id="@+id/et_second_firstname"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:enabled="false"
        android:backgroundTint="@color/pink"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:labelFor="@id/et_second_lastname"
        />

    <EditText
        android:id="@+id/et_second_lastname"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:enabled="false"
        android:backgroundTint="@color/pink"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_number"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:labelFor="@id/et_second_number"
        />

    <EditText
        android:id="@+id/et_second_number"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:enabled="false"
        android:backgroundTint="@color/pink"
        />


</LinearLayout>